# DisLog

./: CMakeLists.txt  Doxyfile  compile_commands.json
plugins/: common.hpp
plugins/core/: CMakeLists.txt  core.cpp  core_echo.cpp
plugins/core/config/: config_handler.cpp  config_handler.hpp
plugins/core/service/: service.cpp  service.hpp
plugins/core/source/: CMakeLists.txt  source.hpp
plugins/examples/: core.json  input.json
plugins/input/: CMakeLists.txt  input.cpp  main.cpp
plugins/input/config/: config_handler.cpp  config_handler.hpp
plugins/input/input/: input.cpp  input.hpp
plugins/receiver/: CMakeLists.txt  receiver.cpp  receiver.hpp
